--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  google_sign_in: ^6.1.6
+  firebase_auth: ^5.2.1
+  firebase_core: ^3.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -61,9 +63,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/logo.png
+    # - assets/images/login_bg.png
+    # - assets/icons/google_icon.png
+    # - assets/icons/flashcard_icon.png
+    # - assets/icons/quiz_icon.png
+    # - assets/icons/progress_icon.png
+    # - assets/icons/settings_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
